# SoundTouchTest

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/appunite/soundtouchtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  soundtouch-jni.cpp
app/src/main/java/com/appunite/soundtouchtest/: ExampleActivity.java  MainActivity.java
app/src/main/java/com/appunite/soundtouchtest/soundtouch/: BPMDetect.java  SoundTouch.java
app/src/main/res/layout/: activity_example.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/appunite/soundtouchtest/: ExampleUnitTest.java
gen-libs/: build.gradle
gen-libs/src/main/cpp/: CMakeLists.txt
gen-libs/src/main/cpp/soundtouch/: CMakeLists.txt
